add 5.1 implementation